[package]
name = "concurrent-ringbuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache-padded = "~1.2"

[dev-dependencies]
claim = "~0.5"
crossbeam-utils = "~0.8"
criterion = "~0.3"

# [[bench]]
# name = "perf_check"
# harness = false

[[bench]]
name = "perf_stack"
harness = false

