[package]
name = "my-async"
version = "0.1.0"
authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
description = "An example async runtime that aims correctness & detailed documentation on underlying mechanisms."
readme = "README.md"
license = "MIT"
categories = ["asynchronous"]
edition = "2021"

[dependencies]
claim = "~0.5"
concurrent-ringbuf = {path = "../concurrent-ringbuf"}
crossbeam-utils = "~0.8"
flume = { version = "~0.10", default-features = false, features = ["select"] }
futures-lite = "~1.12"
log = "~0.4"
polling = "~2.2"
num_cpus = "~1.13"
once_cell = "~1.9"
parking_lot = "~0.11"
priority-queue = "~1.2"
rustc-hash = "~1.1"
rustix = { version = "~0.35", features = ["fs", "use-libc"] }
sharded-slab = "~0.1"
waker-fn = "~1.1"

[dev-dependencies]
bytes = "*"
pin-project-lite = "*"
tempfile = "~3.3"
