[package]
name = "my-async"
version = "0.1.0"
authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
description = "An example async runtime that aims correctness & detailed documentation on underlying mechanisms."
readme = "README.md"
license = "MIT"
categories = ["asynchronous"]
edition = "2021"

[dependencies]
claims = "~0.7"
concurrent-ringbuf = { path = "../concurrent-ringbuf" }
crossbeam-utils = "~0.8"
flume = { version = "~0.10", default-features = false, features = ["select"] }
futures-lite = "~1.13"
log = "~0.4"
mio = { version = "~0.8", features = ["os-poll", "os-ext", "net"] }
num_cpus = "~1.16"
once_cell = "~1.18"
parking_lot = "~0.12"
priority-queue = "~1.3"
rustc-hash = "~1.1"
rustix = { version = "~0.38", features = ["fs", "use-libc"] }
sharded-slab = "~0.1"
waker-fn = "~1.1"

[dev-dependencies]
bytes = "*"
pin-project-lite = "~0.2"
tempfile = "~3.7"
